--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,12 @@
     },
     "require-dev": {
         "badges/poser": "^2.0",
-        "orchestra/testbench-dusk": "^6.0",
+        "fzaninotto/faker": "^1.9",
+        "laravel/laravel": "^8.0",
+        "mockery/mockery": "^1.4",
+        "orchestra/canvas": "^6.0",
+        "orchestra/testbench": "^6.2",
+        "phpunit/phpunit": "^9.3",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
@@ -40,8 +45,10 @@
     "extra": {
         "laravel": {
             "providers": [
+                "BoldBrush\\Bread\\Provider\\BreadServiceProvider"
             ],
             "aliases": {
+                "Bread": "BoldBrush\\Bread\\Bread"
             }
         }
     },
