--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,6 +5,9 @@
       <directory suffix=".php">./src</directory>
     </include>
   </coverage>
+  <php>
+    <env name="APP_ENV" value="testing"/>
+  </php>
   <testsuites>
     <testsuite name="BoldBrush\\Bread\\Tests">
       <directory>./tests</directory>
