--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "doctrine/dbal": "^2.11"
     },
     "require-dev": {
         "badges/poser": "^2.0",
