--- a/composer.json
+++ b/composer.json
@@ -67,8 +67,8 @@
         "cs-check": "vendor/bin/phpcs",
         "cs-fix": "vendor/bin/phpcbf",
         "test": "vendor/bin/phpunit --colors=always",
-        "test-html": "vendor/bin/phpunit --coverage-html ./coverage/html",
-        "test-coverage": "vendor/bin/phpunit --colors=always --coverage-clover ./coverage/clover.xml",
+        "test-html": "vendor/bin/phpunit --coverage-html ./build/logs/html",
+        "test-coverage": "vendor/bin/phpunit --colors=always --coverage-clover ./build/logs/clover.xml",
         "test-txt": "vendor/bin/phpunit --colors=always --coverage-text ./tests"
     }
 }
