--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - composer require php-coveralls/php-coveralls
 
 script:
-  - mkdir -p coverage
+  - mkdir -p build/logs
   - composer check
 
 after_script:
