Fix coverage command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,8 @@ jobs:
         run: composer install --no-progress --prefer-dist --optimize-autoloader
       - name: Test with Code_Sniffer and phpunit
         run: composer check
-      - name: Coverage
-        run: php vendor/bin/php-coveralls -v
+      - name: Send code coverage report to coveralls.io
+        run: vendor/bin/php-coveralls -c .coveralls.github-actions.yml -v
+        env:
+          COVERALLS_RUN_LOCALLY: 1
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
