--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
         run: composer install --no-progress --prefer-dist --optimize-autoloader
       - name: Test with Code_Sniffer and phpunit
         run: composer check
+      - name: Install Coveralls dependency
+        run: composer require php-coveralls/php-coveralls
       - name: Send code coverage report to coveralls.io
         run: vendor/bin/php-coveralls -c .coveralls.github-actions.yml -v
         env:
