--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install Coveralls dependency
         run: composer require php-coveralls/php-coveralls
       - name: Send code coverage report to coveralls.io
-        run: vendor/bin/php-coveralls -c .coveralls.github-actions.yml -v
+        run: vendor/bin/php-coveralls -c .coveralls.yml -v
         env:
           COVERALLS_RUN_LOCALLY: 1
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
