--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-latest, macos-latest]
+        operating-system: [ubuntu-18.04, macos-latest] #https://github.com/actions/virtual-environments/issues/1816
         php-versions: ['7.3', '7.4']
     steps:
       - name: Checkout
