--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 | ^8.0",
         "doctrine/dbal": "^2.12.1"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.9",
+        "fakerphp/faker": "^1.9.2",
         "laravel/laravel": "^8.0",
         "mockery/mockery": "^1.4",
         "orchestra/canvas": "^6.1",
