--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,16 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.3 | ^8.0",
-        "doctrine/dbal": "^2.12.1"
+        "php": "^7.3 | ^8.1",
+        "doctrine/dbal": "^3.4"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.2",
-        "laravel/laravel": "^8.0",
-        "mockery/mockery": "^1.4",
-        "orchestra/canvas": "^6.1",
-        "orchestra/testbench": "^6.5",
-        "squizlabs/php_codesniffer": "^3.5"
+        "fakerphp/faker": "^1.20",
+        "laravel/laravel": "^9.0",
+        "mockery/mockery": "^1.5",
+        "orchestra/canvas": "^7.3",
+        "orchestra/testbench": "^7.11",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
@@ -57,7 +57,7 @@
     "scripts": {
         "check": [
             "@cs-check",
-            "@test-coverage"
+            "@test"
         ],
         "githooks": [
             "@pre-commit",
