--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.3 | ^8.1",
+        "php": "^8.1",
         "doctrine/dbal": "^3.4"
     },
     "require-dev": {
